change menu icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div id="nav-icon">
-                <img class="nav-pic" src="./pictures/nav-icon.png" alt="Nav-Icon" />
+                <img class="nav-pic" src="./pictures/logo1.jpg" alt="Nav-Icon" />
 
             </div>
         </nav>
